fix config and path

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --watch server/src --exec ts-node --ext ts,json server/src/index.ts",
+    "dev": "nodemon --watch server/src --exec ts-node server/src/index.ts",
     "build": "tsc && npm install &&  prisma generate --schema=./server/prisma/schema.prisma && npm install --prefix client && npm run build --prefix client",
     "start": "node server/dist/src/index.js"
   },
