--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
+    "target": "ES2020",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
     "outDir": "./server/dist",
     "rootDir": "./server",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
+  },
+  "ts-node": {
+    "esm": true,
+    "allowImportingTsExtensions": true
   },
   "include": ["server/src/**/*.ts"],
   "exclude": ["node_modules", "**/*.spec.ts", "client"]
